Finita bozza di homepage

--- a/src/app/layout/components/navbar/navbar.component.html
+++ b/src/app/layout/components/navbar/navbar.component.html
@@ -29,8 +29,19 @@
   </mat-sidenav>
   <mat-sidenav-content class="mys-sidenav-content">
     <mat-toolbar>
-      <mat-toolbar-row>
+      <mat-toolbar-row class="mys-d-flex mys-justify-content-between">
         <img class="mys-image" src="assets/img/logo.png" alt="Logo di sprint">
+        <div>
+          <button mat-button>
+            <mat-icon color="accent">person</mat-icon>
+          </button>
+          <button mat-button>
+            <mat-icon color="accent">home</mat-icon>
+          </button>
+          <button mat-button>
+            <mat-icon color="accent">manage_accounts</mat-icon>
+          </button>
+        </div>
       </mat-toolbar-row>
     </mat-toolbar>
 
