--- a/src/styles/_palette.scss
+++ b/src/styles/_palette.scss
@@ -121,4 +121,9 @@ $colors: (
   "warn": mat.get-color-from-palette($warn-palette, 500),
   "dark": #555,
   "light-dark": #6c757d,
+  "grey":#9c9c9c,
+  "heavenly" : #60C2DF,
+  "mostard" : #F0B054,
+  "light-green" : #61BA61,
+  
 );
