--- a/src/styles/_font.scss
+++ b/src/styles/_font.scss
@@ -44,3 +44,11 @@ $font-weights: (300, 500, 600, 700, 800, 900);
     }
   }
 }
+
+$letter-spacings: ( 5, 10);
+
+@each $value in $letter-spacings {
+  .mys-spacing-#{$value} {
+    letter-spacing: $value / 10;
+  }
+}
