--- a/src/app/my-sprint/pages/homepage/homepage.component.html
+++ b/src/app/my-sprint/pages/homepage/homepage.component.html
@@ -1,4 +1,4 @@
-<h1 class="mys-font-size-30 mys-text-color-primary mys-text-center">Homepage</h1>
+<h1 class="mys-font-size-30 mys-text-color-primary">Homepage</h1>
 <section class="mys-my-5">
   <h4>Ciao <i>User </i>, Nel tuo ente sono attivi i seguenti processi: </h4>
   <mat-accordion multi="true">
