--- a/src/app/my-sprint/pages/individuale/individuale.component.html
+++ b/src/app/my-sprint/pages/individuale/individuale.component.html
@@ -1,4 +1,9 @@
-<h1 class="mys-font-size-30 mys-text-color-primary">Performance Individuale</h1>
+<div class="mys-d-flex mys-justify-content-between mys-align-items-start">
+  <h1 class="mys-font-size-30 mys-text-color-primary">Performance Individuale</h1>
+  <button mat-raised-button color="accent">
+    <mat-icon>download</mat-icon>
+  </button>
+</div>
 
 <section class="mys-d-flex mys-justify-content-between">
   <div>
