--- a/src/app/my-sprint/pages/gestionale-coll/gestionale-coll.component.html
+++ b/src/app/my-sprint/pages/gestionale-coll/gestionale-coll.component.html
@@ -1,1 +1,6 @@
-<h1>Gestionale per collaboratori</h1>
+<div class="mys-d-flex mys-justify-content-between mys-align-items-start">
+  <h1 class="mys-font-size-30 mys-text-color-primary">Gestionale per collaboratori</h1>
+  <button mat-raised-button color="accent">
+    <mat-icon>download</mat-icon>
+  </button>
+</div>
