--- a/src/app/my-sprint/pages/sintesi-coll/sintesi-coll.component.html
+++ b/src/app/my-sprint/pages/sintesi-coll/sintesi-coll.component.html
@@ -1,10 +1,14 @@
-<h1 class="mys-font-size-30 mys-text-color-primary">Sintesi per Collaboratori</h1>
+<div class="mys-d-flex mys-justify-content-between mys-align-items-start">
+  <h1 class="mys-font-size-30 mys-text-color-primary">Sintesi per collaboratori</h1>
+  <button mat-raised-button color="accent">
+    <mat-icon>download</mat-icon>
+  </button>
+</div>
 
 <section class="mys-d-flex mys-justify-content-between">
   <div>
     <span class="mys-text-color-primary">Persona</span>
     <span class="mys-mx-5">Nome persona</span>
-    <button mat-button color="primary">Cambia Persona</button>
   </div>
   <div>
     <mat-form-field appearance="outline">
@@ -17,8 +21,9 @@
     </mat-form-field>
   </div>
 </section>
-
-<section class="mys-d-flex mys-justify-content-between mys-align-items-start">
+<span class="mys-text-color-primary">UO</span>
+<span class="mys-mx-5">Nome UO</span>
+<section class="mys-d-flex mys-mt-5 mys-justify-content-between mys-align-items-start">
   <div>
     <mat-card>
       <mat-card-header>
@@ -33,10 +38,10 @@
             *ngFor="let chip of chipsOption" [selectable]="selectable">{{chip.viewValue}}</mat-chip>
         </mat-chip-list>
         <mat-form-field appearance="outline" class="mys-w-100 mys-mt-4">
-          <mat-label>Stato obiettivo</mat-label>
+          <mat-label>Persona</mat-label>
           <mat-select multiple>
-            <mat-option *ngFor="let stato of statiObiettivo" [value]="stato">
-              {{stato}}
+            <mat-option *ngFor="let persona of personeRiferimento" [value]="persona">
+              {{persona}}
             </mat-option>
           </mat-select>
         </mat-form-field>
