--- a/src/app/my-sprint/pages/sintesi-coll/sintesi-coll.component.html
+++ b/src/app/my-sprint/pages/sintesi-coll/sintesi-coll.component.html
@@ -5,7 +5,7 @@
   </button>
 </div>
 
-<section class="mys-d-flex mys-justify-content-between">
+<section class="mys-d-flex mys-justify-content-between mys-align-items-end mys-mb-3">
   <div>
     <span class="mys-text-color-primary">Persona</span>
     <span class="mys-mx-5">Nome persona</span>
@@ -23,7 +23,7 @@
 </section>
 <span class="mys-text-color-primary">UO</span>
 <span class="mys-mx-5">Nome UO</span>
-<section class="mys-d-flex mys-mt-5 mys-justify-content-between mys-align-items-start">
+<section class="mys-d-flex mys-mt-5 mys-justify-content-between mys-align-items-end">
   <div>
     <mat-card>
       <mat-card-header>
@@ -38,11 +38,28 @@
             *ngFor="let chip of chipsOption" [selectable]="selectable">{{chip.viewValue}}</mat-chip>
         </mat-chip-list>
         <mat-form-field appearance="outline" class="mys-w-100 mys-mt-4">
-          <mat-label>Persona</mat-label>
-          <mat-select multiple>
-            <mat-option *ngFor="let persona of personeRiferimento" [value]="persona">
-              {{persona}}
-            </mat-option>
+          <mat-label>Persone</mat-label>
+          <mat-select #personeSel multiple>
+            <mat-select-trigger *ngIf="allPersoneSelected">
+              Tutti selezionati
+            </mat-select-trigger>
+            <button mat-button class="mys-w-100" (click)="toggleAllPersoneSelection()">
+              <span *ngIf="!allPersoneSelected;else allSelected" class="mys-d-flex mys-align-items-center">
+                <mat-icon color="primary">fact_check</mat-icon>
+                Seleziona tutti
+              </span>
+              <ng-template #allSelected>
+                <span class="mys-d-flex mys-align-items-center">
+                  <mat-icon color="accent">delete_sweep</mat-icon>
+                  Deseleziona tutti
+                </span>
+              </ng-template>
+            </button>
+            <mat-optgroup label="Persone">
+              <mat-option *ngFor="let persona of persone" [value]="persona">
+                {{persona}}
+              </mat-option>
+            </mat-optgroup>
           </mat-select>
         </mat-form-field>
       </mat-card-actions>
