--- a/src/app/my-sprint/pages/individuale/individuale.component.scss
+++ b/src/app/my-sprint/pages/individuale/individuale.component.scss
@@ -2,11 +2,14 @@
 
 .mys-chip-selected {
   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.377) ;
+  cursor: pointer;
 }
 
 .mys-chip {
+  opacity: .5;
   background-color: map-get(palette.$accent-palette, 100 );
   color: palette.$dark-primary-text;
+  cursor: pointer;
 }
 section {
   .mat-card{
