Sostituito mat-option 'Seleziona tutti' con button per non rientrare tra i value restituiti dalla select

--- a/src/app/my-sprint/pages/gestionale-uo/gestionale-uo.component.html
+++ b/src/app/my-sprint/pages/gestionale-uo/gestionale-uo.component.html
@@ -5,7 +5,7 @@
   </button>
 </div>
 
-<section class="mys-d-flex mys-justify-content-between">
+<section class="mys-d-flex mys-justify-content-between mys-align-items-end mys-mb-3">
   <div>
     <span class="mys-text-color-primary">Persona</span>
     <span class="mys-mx-5">Nome persona</span>
@@ -22,9 +22,15 @@
     </mat-form-field>
   </div>
 </section>
-<span class="mys-text-color-primary">UO</span>
-<span class="mys-mx-5">Nome UO</span>
-<section class="mys-d-flex mys-justify-content-between mys-align-items-start mys-mt-5">
+<section class="mys-d-flex mys-justify-content-between">
+  <p>
+    <span class="mys-text-color-primary">UO</span>
+    <span class="mys-mx-5">Nome UO</span>
+  </p>
+  <button mat-raised-button color="accent">Crea Obiettivo</button>
+
+</section>
+<section class="mys-d-flex mys-justify-content-between mys-align-items-end mys-mt-5">
   <div>
     <mat-card>
       <mat-card-header>
@@ -38,16 +44,88 @@
             (click)="chip.state=!chip.state;changeSelected(chip.viewValue)" color="primary"
             *ngFor="let chip of chipsOption" [selectable]="selectable">{{chip.viewValue}}</mat-chip>
         </mat-chip-list>
-        <mat-form-field appearance="outline" class="mys-w-100 mys-mt-4">
-          <mat-label>Stato obiettivo</mat-label>
-          <mat-select multiple>
-            <mat-option *ngFor="let stato of statiObiettivo" [value]="stato">
-              {{stato}}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
+        <div class="mys-d-flex mys-flex-row mys-mt-2">
+
+          <mat-form-field appearance="outline" class="mys-mr-3">
+            <mat-label>Piano</mat-label>
+            <mat-select #pianoSel multiple>
+              <mat-select-trigger *ngIf="allPianoSelected">
+                Tutti selezionati
+              </mat-select-trigger>
+              <button mat-button class="mys-w-100" (click)="toggleAllPianoSelection()">
+                <span *ngIf="!allPianoSelected;else allSelected" class="mys-d-flex mys-align-items-center">
+                  <mat-icon color="primary">fact_check</mat-icon>
+                  Seleziona tutti
+                </span>
+                <ng-template #allSelected>
+                  <span class="mys-d-flex mys-align-items-center">
+                    <mat-icon color="accent">delete_sweep</mat-icon>
+                    Deseleziona tutti
+                  </span>
+                </ng-template>
+              </button>
+              <mat-optgroup label="Piani">
+                <mat-option *ngFor="let piano of piani" [value]="piano">
+                  {{piano}}
+                </mat-option>
+              </mat-optgroup>
+            </mat-select>
+          </mat-form-field>
+
+          <mat-form-field appearance="outline" class="mys-mr-3">
+            <mat-label>Persone</mat-label>
+            <mat-select #personeSel multiple>
+              <mat-select-trigger *ngIf="allPersoneSelected">
+                Tutti selezionati
+              </mat-select-trigger>
+              <button mat-button class="mys-w-100" (click)="toggleAllPersoneSelection()">
+                <span *ngIf="!allPersoneSelected;else allSelected" class="mys-d-flex mys-align-items-center">
+                  <mat-icon color="primary">fact_check</mat-icon>
+                  Seleziona tutti
+                </span>
+                <ng-template #allSelected>
+                  <span class="mys-d-flex mys-align-items-center">
+                    <mat-icon color="accent">delete_sweep</mat-icon>
+                    Deseleziona tutti
+                  </span>
+                </ng-template>
+              </button>
+              <mat-optgroup label="Persone">
+                <mat-option *ngFor="let persona of persone" [value]="persona">
+                  {{persona}}
+                </mat-option>
+              </mat-optgroup>
+            </mat-select>
+          </mat-form-field>
+
+          <mat-form-field appearance="outline" class="mys-mr-3">
+            <mat-label>Stato Obiettivo</mat-label>
+            <mat-select #statiSel multiple>
+              <mat-select-trigger *ngIf="allStatiSelected">
+                Tutti selezionati
+              </mat-select-trigger>
+              <button mat-button class="mys-w-100" (click)="toggleAllStatiSelection()">
+                <span *ngIf="!allStatiSelected;else allSelected" class="mys-d-flex mys-align-items-center">
+                  <mat-icon color="primary">fact_check</mat-icon>
+                  Seleziona tutti
+                </span>
+                <ng-template #allSelected>
+                  <span class="mys-d-flex mys-align-items-center">
+                    <mat-icon color="accent">delete_sweep</mat-icon>
+                    Deseleziona tutti
+                  </span>
+                </ng-template>
+              </button>
+              <mat-optgroup label="Stati">
+                <mat-option *ngFor="let stato of statiObiettivo" [value]="stato">
+                  {{stato}}
+                </mat-option>
+              </mat-optgroup>
+            </mat-select>
+          </mat-form-field>
+
+        </div>
       </mat-card-actions>
     </mat-card>
   </div>
-  <button mat-raised-button color="accent">Crea Obiettivo</button>
 </section>
