--- a/src/app/my-sprint/pages/individuale/individuale.component.html
+++ b/src/app/my-sprint/pages/individuale/individuale.component.html
@@ -23,7 +23,7 @@
   </div>
 </section>
 
-<section class="mys-d-flex mys-justify-content-between mys-align-items-end">
+<section class="mys-d-flex mys-justify-content-between mys-align-items-end mys-mb-5">
   <div>
     <mat-card>
       <mat-card-header>
