--- a/src/app/my-sprint/pages/sintesi-coll/sintesi-coll.component.html
+++ b/src/app/my-sprint/pages/sintesi-coll/sintesi-coll.component.html
@@ -45,33 +45,8 @@
         </mat-chip-list>
 
         <div class="mys-d-flex mys-flex-row mys-mt-2">
-          <mat-form-field appearance="outline" *ngIf="isUOSelActive" class="mys-mr-3">
-            <mat-label>UO Figlie</mat-label>
-            <mat-select #UOFiglieSel multiple >
-              <mat-select-trigger *ngIf="allUOFiglieSelected">
-                Tutte le UO selezionate
-              </mat-select-trigger>
-              <button mat-button (click)="toggleAllUOFiglieSelection()">
-                <span *ngIf="!allUOFiglieSelected;else allSelected" class="mys-d-flex mys-align-items-center">
-                  <mat-icon color="primary">fact_check</mat-icon>
-                  Seleziona tutti
-                </span>
-                <ng-template #allSelected>
-                  <span class="mys-d-flex mys-align-items-center">
-                    <mat-icon color="accent">delete_sweep</mat-icon>
-                    Deseleziona tutti
-                  </span>
-                </ng-template>
-              </button>
-              <mat-optgroup label="Persone">
-                <mat-option *ngFor="let uo of uoFiglie" [value]="uo">
-                  {{uo}}
-                </mat-option>
-              </mat-optgroup>
-            </mat-select>
-          </mat-form-field>
           
-          <mat-form-field appearance="outline" class="mys-w-100">
+          <mat-form-field appearance="outline" class="mys-mr-3">
             <mat-label>Persone</mat-label>
             <mat-select #personeSel multiple>
               <mat-select-trigger *ngIf="allPersoneSelected">
@@ -92,6 +67,32 @@
               <mat-optgroup label="Persone">
                 <mat-option *ngFor="let persona of persone" [value]="persona">
                   {{persona}}
+                </mat-option>
+              </mat-optgroup>
+            </mat-select>
+          </mat-form-field>
+
+          <mat-form-field appearance="outline" *ngIf="isUOSelActive" class="mys-mr-3">
+            <mat-label>UO Figlie</mat-label>
+            <mat-select #UOFiglieSel multiple>
+              <mat-select-trigger *ngIf="allUOFiglieSelected">
+                Tutte le UO selezionate
+              </mat-select-trigger>
+              <button mat-button (click)="toggleAllUOFiglieSelection()">
+                <span *ngIf="!allUOFiglieSelected;else allSelected" class="mys-d-flex mys-align-items-center">
+                  <mat-icon color="primary">fact_check</mat-icon>
+                  Seleziona tutti
+                </span>
+                <ng-template #allSelected>
+                  <span class="mys-d-flex mys-align-items-center">
+                    <mat-icon color="accent">delete_sweep</mat-icon>
+                    Deseleziona tutti
+                  </span>
+                </ng-template>
+              </button>
+              <mat-optgroup label="UO Figlie">
+                <mat-option *ngFor="let uo of uoFiglie" [value]="uo">
+                  {{uo}}
                 </mat-option>
               </mat-optgroup>
             </mat-select>
