--- a/src/app/my-sprint/pages/gestionale-coll/gestionale-coll.component.html
+++ b/src/app/my-sprint/pages/gestionale-coll/gestionale-coll.component.html
@@ -1,6 +1,157 @@
 <div class="mys-d-flex mys-justify-content-between mys-align-items-start">
-  <h1 class="mys-font-size-30 mys-text-color-primary">Gestionale per collaboratori</h1>
+  <h1 class="mys-font-size-30 mys-text-color-primary">Gestionale per Collaboratori</h1>
   <button mat-raised-button color="accent">
     <mat-icon>download</mat-icon>
   </button>
 </div>
+
+<section class="mys-d-flex mys-justify-content-between mys-align-items-end mys-mb-3">
+  <div>
+    <span class="mys-text-color-primary">Persona</span>
+    <span class="mys-mx-5">Nome persona</span>
+    <button mat-button color="primary">Cambia Persona</button>
+  </div>
+  <div>
+    <mat-form-field appearance="outline">
+      <mat-label>Anno di riferimento</mat-label>
+      <mat-select [(value)]="currentYear">
+        <mat-option *ngFor="let date of dates" [value]="date">
+          {{date}}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+  </div>
+</section>
+<section class="mys-d-flex mys-justify-content-between">
+  <p>
+    <span class="mys-text-color-primary">UO</span>
+    <span class="mys-mx-5">Nome UO</span>
+  </p>
+  <button mat-raised-button color="accent">Crea Obiettivo</button>
+
+</section>
+<section class="mys-d-flex mys-justify-content-between mys-align-items-end mys-mt-5">
+  <div>
+    <mat-card>
+      <mat-card-header>
+        <mat-card-title class="mys-text-color-primary">Filtri Rapidi
+
+        </mat-card-title>
+      </mat-card-header>
+      <mat-card-actions>
+        <mat-chip-list aria-label="Selezione dei filtri rapidi" [multiple]="multiple" [selectable]="selectable">
+          <mat-chip [ngClass]="chip.state ? 'mys-chip-selected': 'mys-chip'" [selected]="chip.state"
+            (click)="chip.state=!chip.state;changeSelected(chip.viewValue)" color="primary"
+            *ngFor="let chip of chipsOption" [selectable]="selectable">{{chip.viewValue}}</mat-chip>
+        </mat-chip-list>
+        <div class="mys-d-flex mys-flex-row mys-mt-2">
+
+          <mat-form-field appearance="outline" class="mys-mr-3">
+            <mat-label>Piano</mat-label>
+            <mat-select #pianoSel multiple>
+              <mat-select-trigger *ngIf="allPianoSelected">
+                Tutti selezionati
+              </mat-select-trigger>
+              <button mat-button class="mys-w-100" (click)="toggleAllPianoSelection()">
+                <span *ngIf="!allPianoSelected;else allSelected" class="mys-d-flex mys-align-items-center">
+                  <mat-icon color="primary">fact_check</mat-icon>
+                  Seleziona tutti
+                </span>
+                <ng-template #allSelected>
+                  <span class="mys-d-flex mys-align-items-center">
+                    <mat-icon color="accent">delete_sweep</mat-icon>
+                    Deseleziona tutti
+                  </span>
+                </ng-template>
+              </button>
+              <mat-optgroup label="Piani">
+                <mat-option *ngFor="let piano of piani" [value]="piano">
+                  {{piano}}
+                </mat-option>
+              </mat-optgroup>
+            </mat-select>
+          </mat-form-field>
+
+          <mat-form-field appearance="outline" class="mys-mr-3">
+            <mat-label>Persone</mat-label>
+            <mat-select #personeSel multiple>
+              <mat-select-trigger *ngIf="allPersoneSelected">
+                Tutti selezionati
+              </mat-select-trigger>
+              <button mat-button class="mys-w-100" (click)="toggleAllPersoneSelection()">
+                <span *ngIf="!allPersoneSelected;else allSelected" class="mys-d-flex mys-align-items-center">
+                  <mat-icon color="primary">fact_check</mat-icon>
+                  Seleziona tutti
+                </span>
+                <ng-template #allSelected>
+                  <span class="mys-d-flex mys-align-items-center">
+                    <mat-icon color="accent">delete_sweep</mat-icon>
+                    Deseleziona tutti
+                  </span>
+                </ng-template>
+              </button>
+              <mat-optgroup label="Persone">
+                <mat-option *ngFor="let persona of persone" [value]="persona">
+                  {{persona}}
+                </mat-option>
+              </mat-optgroup>
+            </mat-select>
+          </mat-form-field>
+
+          <mat-form-field appearance="outline" class="mys-mr-3">
+            <mat-label>Stato Obiettivo</mat-label>
+            <mat-select #statiSel multiple>
+              <mat-select-trigger *ngIf="allStatiSelected">
+                Tutti selezionati
+              </mat-select-trigger>
+              <button mat-button class="mys-w-100" (click)="toggleAllStatiSelection()">
+                <span *ngIf="!allStatiSelected;else allSelected" class="mys-d-flex mys-align-items-center">
+                  <mat-icon color="primary">fact_check</mat-icon>
+                  Seleziona tutti
+                </span>
+                <ng-template #allSelected>
+                  <span class="mys-d-flex mys-align-items-center">
+                    <mat-icon color="accent">delete_sweep</mat-icon>
+                    Deseleziona tutti
+                  </span>
+                </ng-template>
+              </button>
+              <mat-optgroup label="Stati">
+                <mat-option *ngFor="let stato of statiObiettivo" [value]="stato">
+                  {{stato}}
+                </mat-option>
+              </mat-optgroup>
+            </mat-select>
+          </mat-form-field>
+
+          <mat-form-field appearance="outline" *ngIf="isUOSelActive" class="mys-mr-3">
+            <mat-label>UO Figlie</mat-label>
+            <mat-select #UOFiglieSel multiple>
+              <mat-select-trigger *ngIf="allUOFiglieSelected">
+                Tutte le UO selezionate
+              </mat-select-trigger>
+              <button mat-button (click)="toggleAllUOFiglieSelection()">
+                <span *ngIf="!allUOFiglieSelected;else allSelected" class="mys-d-flex mys-align-items-center">
+                  <mat-icon color="primary">fact_check</mat-icon>
+                  Seleziona tutti
+                </span>
+                <ng-template #allSelected>
+                  <span class="mys-d-flex mys-align-items-center">
+                    <mat-icon color="accent">delete_sweep</mat-icon>
+                    Deseleziona tutti
+                  </span>
+                </ng-template>
+              </button>
+              <mat-optgroup label="UO Figlie">
+                <mat-option *ngFor="let uo of uoFiglie" [value]="uo">
+                  {{uo}}
+                </mat-option>
+              </mat-optgroup>
+            </mat-select>
+          </mat-form-field>
+
+        </div>
+      </mat-card-actions>
+    </mat-card>
+  </div>
+</section>
