--- a/src/styles/_font.scss
+++ b/src/styles/_font.scss
@@ -19,7 +19,7 @@
   text-shadow: 0 3px 6px #00000069;
 }
 
-$font-sizes: ( 14, 20, 30);
+$font-sizes: (10, 14, 20, 30);
 
 @each $fontSize in $font-sizes {
   .mys-font-size-#{$fontSize} {
