--- a/src/styles/_palette.scss
+++ b/src/styles/_palette.scss
@@ -122,6 +122,7 @@ $colors: (
   "dark": #555,
   "light-dark": #6c757d,
   "grey":#9c9c9c,
+  "light-grey":#dbd8d8,
   "heavenly" : #60C2DF,
   "mostard" : #F0B054,
   "light-green" : #61BA61,
