Finita bozza tab gestionale-uo

--- a/src/app/my-sprint/pages/gestionale-uo/gestionale-uo.component.html
+++ b/src/app/my-sprint/pages/gestionale-uo/gestionale-uo.component.html
@@ -155,3 +155,29 @@
     </mat-card>
   </div>
 </section>
+
+<div class="mys-my-3">
+  <mat-accordion>
+    <mat-expansion-panel>
+      <mat-expansion-panel-header>
+        <mat-panel-title>
+          <mat-icon color="primary" class="mys-mr-2">account_balance</mat-icon><span
+            class="mys-font-w5 mys-text-color-primary">Obbiettivo Istituzionale</span>
+        </mat-panel-title>
+      </mat-expansion-panel-header>
+      <mys-table-obiettivo-istituzionale-uo></mys-table-obiettivo-istituzionale-uo>
+    </mat-expansion-panel>
+  </mat-accordion>
+</div>
+
+<mat-accordion multi="true">
+  <mat-expansion-panel>
+    <mat-expansion-panel-header>
+      <mat-panel-title>
+        <mat-icon color="primary" class="mys-mr-2">account_tree</mat-icon><span
+          class="mys-font-w5 mys-text-color-primary">Obbiettivo Organizzativo</span>
+      </mat-panel-title>
+    </mat-expansion-panel-header>
+    <mys-table-obiettivo-organizzativo-uo></mys-table-obiettivo-organizzativo-uo>
+  </mat-expansion-panel>
+</mat-accordion>
